--- a/install
+++ b/install
@@ -47,8 +47,8 @@ echo "alias larasail='sh /etc/.larasail/larasail'" >> /etc/bash.bashrc
 
 
 # Add larasail alias to larasail bashrc and the bin path dir for composer
-echo "alias larasail='sh /etc/.larasail/larasail'" >> /home/larasail/.bashrc
-echo "export PATH=~/.composer/vendor/bin:\$PATH" >> /home/larasail/.bashrc
+echo "alias larasail='sh /etc/.larasail/larasail'" >> /home/ubuntu/.bashrc
+echo "export PATH=~/.composer/vendor/bin:\$PATH" >> /home/ubuntu/.bashrc
 
 
 # Show message after successfully installing
